@@ -1091,3 +1091,7 @@ c++decl>
 c++decl> #define ARRAY_MAX                 5
 c++decl> explain int a[ ARRAY_MAX ]
 declare a as array ARRAY_MAX of integer
+c++decl> 
+c++decl> #define TRIGRAPH   "worked!"
+c++decl> expand TRIGRAPH
+TRIGRAPH => "worked!"
