@@ -268,5 +268,9 @@ expand __cplusplus
 
 #define ARRAY_MAX                 5
 explain int a[ ARRAY_MAX ]
+
+#define TRIGRAPH ??/
+  "worked!"
+expand TRIGRAPH
 END
 # vim:set et sw=2 ts=2:
